【Issue#2】[UT試験]ユニットテストのレビュー指摘修正